AC_INIT(src/SVD.cc)
: ${R_HOME=`R RHOME`}
if test -z "${R_HOME}"; then
  echo "could not determine R_HOME"
  exit 1
fi
CC=`grep "^CC" ${R_HOME}/etc/Makeconf | sed "s/^CC *= *//"`
AC_PROG_CC
F77=`grep "^FC" ${R_HOME}/etc/Makeconf | sed "s/^FC *= *//"`
FLIBS=`grep "^FLIBS" ${R_HOME}/etc/Makeconf | sed "s/^FLIBS *= *//"`
have_f77_underscore=false
if test -n "`grep HAVE_F77_UNDERSCORE ${R_HOME}/include/Rconfig.h | \
             grep '#define'`"; then
  have_f77_underscore=true
elif test -n "`grep F77 ${R_HOME}/include/Rconfig.h | grep '_$'`"; then
  have_f77_underscore=true
fi
if ${have_f77_underscore}; then
  dgemm_func=dgemm_
  cheev_func=cheev_
else
  dgemm_func=dgemm
  cheev_func=cheev
fi
OCTAVE_BLAS_LIBS
if test -z "${BLAS_LIBS}"; then
  echo "could not find your BLAS library"
  exit 1
fi
AC_CHECK_LIB(lapack, ${cheev_func}, , NO_LIBLAPACK=1,
  [${BLAS_LIBS} ${FLIBS}])
if test ${NO_LIBLAPACK}; then
  echo "could not find your LAPACK library."
  exit 1
fi
AC_OUTPUT(src/Makevars)
